<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ProgressBar
        android:id="@+id/statusBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_motivate"
        android:textSize="12sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:outlineSpotShadowColor="@color/transparent"
            app:cardCornerRadius="16dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/val_meditate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/color_text"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_min_meditate"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/color_text" />
            </LinearLayout>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="60dp"
                android:layout_gravity="end|top"
                android:layout_marginEnd="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/trophy" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:outlineSpotShadowColor="@color/transparent"
            app:cardCornerRadius="16dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/val_meditate_times"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/color_text"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_times_meditate"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/color_text" />
            </LinearLayout>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="60dp"
                android:layout_gravity="end|top"
                android:layout_marginEnd="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/check" />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:outlineSpotShadowColor="@color/transparent"
            app:cardCornerRadius="16dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/val_breathe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/color_text"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_min_breathe"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/color_text" />
            </LinearLayout>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="60dp"
                android:layout_gravity="end|top"
                android:layout_marginEnd="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/trophy" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:outlineSpotShadowColor="@color/transparent"
            app:cardCornerRadius="16dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/val_breathe_times"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/color_text"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_times_breathe"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/color_text" />
            </LinearLayout>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="60dp"
                android:layout_gravity="end|top"
                android:layout_marginEnd="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/check" />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</LinearLayout>