<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/music_background"
    tools:context=".fragments.HomeFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/breatheView"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_marginEnd="-125dp"
        android:layout_marginTop="-10dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/leaf"
        android:layout_gravity="end|top"
        tools:ignore="MissingConstraints"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="18dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/good_morning"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody1"
                android:text="@string/quote"
                android:paddingRight="100dp"
                android:lineHeight="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"/>

            <include layout="@layout/report" android:id="@+id/id" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/remind"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                app:cornerRadius="24dp"
                android:layout_gravity="end"
                android:layout_margin="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:backgroundTint="@color/green_700"
                android:text="Set Reminder"
                app:icon="@drawable/ic_reminder"
                app:iconGravity="textEnd"
                app:iconPadding="8dp"
                app:iconTint="@color/custom_color_background"
                app:iconSize="24dp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:clickable="true"
                android:focusable="true"
                android:checkable="true"
                app:cardCornerRadius="16dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/green_200"
                android:outlineAmbientShadowColor="@color/green_700"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="375dp"
                    android:layout_height="171dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="Start Meditating"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="328dp"
                        android:layout_height="wrap_content"
                        android:lineHeight="20sp"
                        android:paddingEnd="120dp"
                        android:text="@string/meditation_desc"
                        android:textAppearance="?attr/textAppearanceBody2" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/meditate_exercise"
                        android:layout_width="125dp"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/black"
                        android:gravity="center_horizontal"
                        android:text="Start Now"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        app:cornerRadius="10dp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="148dp"
                    android:layout_height="124dp"
                    android:layout_gravity="end"
                    android:scaleType="fitEnd"
                    android:src="@drawable/card_meditate" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/breathe"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:clickable="true"
                android:focusable="true"
                android:checkable="true"
                app:cardCornerRadius="16dp"
                android:backgroundTint="@color/exercise_breath"
                android:outlineAmbientShadowColor="@color/green_700"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Breathe Exercise"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        android:layout_width="328dp"
                        android:layout_height="wrap_content"
                        android:lineHeight="20sp"
                        android:paddingEnd="100dp"
                        android:text="@string/breathing_desc"
                        android:textAppearance="?attr/textAppearanceBody2" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/breath_exercise"
                        android:layout_width="125dp"
                        android:layout_height="50dp"
                        android:layout_gravity="start"
                        android:backgroundTint="@color/black"
                        android:text="Start Now"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:gravity="center_horizontal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        app:cornerRadius="10dp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="182dp"
                    android:layout_height="180dp"
                    android:layout_gravity="end"
                    android:scaleType="fitEnd"
                    android:src="@drawable/card_breath" />
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>
</FrameLayout>